# spaghettified

./: WaveContourCalculator_hw.py  main_documentation.rst  tasks.py
HAKOU/v3/: setup.py
HAKOU/v3/source/: CMakeLists.txt  README.txt  get_latest_jsoncpp.sh  jsoncpp_0.5.0_build.sh
HAKOU/v3/source/src/: CMakeLists.txt  KSM_CalculationZip.cpp  cmdline.c  cmdline.h  commandopts.ggo
HAKOU/v3/source/src/cmake/: FindEigen.cmake
HAKOUpy/v2/: compareResults.py  unzipTarget.py  utils.py
HAKOUpy/v3/: compareResults.py  testTask.py  unzipTarget.py  utils.py
MLSOperations/: MLSFitting.cpp  MLSFitting.h  MLSFitting.i  MLSFitting.py  MLSFitting_wrap.cxx  __init__.py  index.rst  outputLogger.py  utils.py
WaveContourGenerator/: index.rst  utils.py  wavecontourenerator.py
